--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,9 @@
   },
   "rules": {
     "no-console": 0,
-    "prettier/prettier": 1
+    "prettier/prettier": 1,
+    "quotes": [1, "single", "avoid-escape"],
+    "jsx-quotes": [1, "prefer-single"]
     // "consistent-return": "off"
   }
 }
