--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     /* Advanced Options */
     "skipLibCheck": true,                         /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true,     /* Disallow inconsistently-cased references to the same file. */
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "baseUrl": ".",
   },
   "include": [
     "src"
