--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@jackfranklin/test-data-bot": "^1.3.0",
     "@types/jest": "^26.0.15",
     "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
